--- a/src/ui/login.form
+++ b/src/ui/login.form
@@ -1,29 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ui.login">
-  <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="BorderLayout" hgap="0" vgap="0">
+  <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridBagLayout">
     <constraints>
       <xy x="20" y="20" width="465" height="251"/>
     </constraints>
-    <properties/>
-    <border type="none"/>
+    <properties>
+      <enabled value="true"/>
+      <focusTraversalPolicyProvider value="false"/>
+      <inheritsPopupMenu value="false"/>
+      <maximumSize width="384" height="256"/>
+      <minimumSize width="256" height="144"/>
+      <preferredSize width="256" height="192"/>
+      <requestFocusEnabled value="true"/>
+    </properties>
+    <border type="none">
+      <title-color color="-16777216"/>
+    </border>
     <children>
       <grid id="5330" binding="TopPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
-        <constraints border-constraint="North"/>
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <gridbag weightx="1.0" weighty="1.0"/>
+        </constraints>
         <properties/>
         <border type="none"/>
         <children/>
       </grid>
       <grid id="37954" binding="CenterPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
-        <constraints border-constraint="Center"/>
+        <constraints>
+          <grid row="0" column="1" row-span="2" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <gridbag weightx="1.0" weighty="1.0"/>
+        </constraints>
         <properties/>
         <border type="none"/>
         <children>
-          <grid id="559c1" layout-manager="GridBagLayout">
+          <grid id="559c1" binding="logPanel" layout-manager="GridBagLayout">
             <constraints border-constraint="Center"/>
             <properties/>
             <border type="none"/>
             <children>
-              <component id="f0c43" class="javax.swing.JPasswordField" binding="a12312PasswordField" default-binding="true">
+              <component id="f0c43" class="javax.swing.JPasswordField" binding="passwdTextField">
                 <constraints>
                   <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -34,32 +50,25 @@
                   <text value=""/>
                 </properties>
               </component>
-              <component id="5e496" class="javax.swing.JLabel">
+              <component id="5e496" class="javax.swing.JLabel" binding="usernameLbl">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                   <gridbag weightx="0.0" weighty="0.0"/>
                 </constraints>
                 <properties>
-                  <text value="用户名"/>
+                  <font size="18"/>
+                  <text value="用　戶"/>
                 </properties>
               </component>
-              <component id="28ffd" class="javax.swing.JLabel">
+              <component id="28ffd" class="javax.swing.JLabel" binding="passwdLbl">
                 <constraints>
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                   <gridbag weightx="0.0" weighty="0.0"/>
                 </constraints>
                 <properties>
+                  <font size="18"/>
                   <text value="密　码"/>
                 </properties>
-              </component>
-              <component id="3aa25" class="javax.swing.JTextField" binding="textField1" default-binding="true">
-                <constraints>
-                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                    <preferred-size width="150" height="-1"/>
-                  </grid>
-                  <gridbag weightx="1.0" weighty="0.0"/>
-                </constraints>
-                <properties/>
               </component>
               <grid id="2f7de" layout-manager="BorderLayout" hgap="0" vgap="0">
                 <constraints>
@@ -70,22 +79,38 @@
                 <border type="none"/>
                 <children/>
               </grid>
-              <grid id="9f0e1" layout-manager="BorderLayout" hgap="0" vgap="0">
+              <grid id="9f0e1" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
                 <constraints>
                   <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                   <gridbag weightx="1.0" weighty="1.0"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
-                <children/>
+                <children>
+                  <component id="4d7b6" class="javax.swing.JButton" binding="loginBtn">
+                    <constraints/>
+                    <properties>
+                      <text value="登录"/>
+                    </properties>
+                  </component>
+                  <component id="12a8" class="javax.swing.JButton" binding="signinBtn">
+                    <constraints/>
+                    <properties>
+                      <text value="注册"/>
+                    </properties>
+                  </component>
+                </children>
               </grid>
+              <component id="3aa25" class="javax.swing.JTextField" binding="userTextField">
+                <constraints>
+                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="-1"/>
+                  </grid>
+                  <gridbag weightx="1.0" weighty="0.0"/>
+                </constraints>
+                <properties/>
+              </component>
             </children>
-          </grid>
-          <grid id="51e74" layout-manager="BorderLayout" hgap="0" vgap="0">
-            <constraints border-constraint="West"/>
-            <properties/>
-            <border type="line"/>
-            <children/>
           </grid>
         </children>
       </grid>
