--- a/src/ui/contacts.form
+++ b/src/ui/contacts.form
@@ -45,7 +45,7 @@
                     <properties/>
                     <border type="none"/>
                     <children>
-                      <component id="ddec6" class="javax.swing.JTextField" binding="textFieldSearch">
+                      <component id="ddec6" class="javax.swing.JTextField" binding="searchTextField">
                         <constraints>
                           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                             <preferred-size width="150" height="-1"/>
@@ -67,13 +67,21 @@
                       </component>
                     </children>
                   </grid>
-                  <component id="bbe6f" class="javax.swing.JTable" binding="catalogue">
+                  <scrollpane id="b8548" binding="contentsScrollPane">
                     <constraints border-constraint="Center"/>
-                    <properties>
-                      <gridColor color="-16777216"/>
-                      <showHorizontalLines value="true"/>
-                    </properties>
-                  </component>
+                    <properties/>
+                    <border type="none"/>
+                    <children>
+                      <component id="bbe6f" class="javax.swing.JTable" binding="catalogue">
+                        <constraints/>
+                        <properties>
+                          <gridColor color="-16777216"/>
+                          <showHorizontalLines value="true"/>
+                          <visible value="true"/>
+                        </properties>
+                      </component>
+                    </children>
+                  </scrollpane>
                 </children>
               </grid>
               <tabbedpane id="f1f66" binding="tabbedPane1" default-binding="true">
@@ -361,6 +369,12 @@
               <text value="删除选中"/>
             </properties>
           </component>
+          <component id="84c9c" class="javax.swing.JButton" binding="searchByCondBtn">
+            <constraints/>
+            <properties>
+              <text value="条件查询"/>
+            </properties>
+          </component>
           <component id="c0f67" class="javax.swing.JButton" binding="statBtn">
             <constraints/>
             <properties>
@@ -371,6 +385,12 @@
             <constraints/>
             <properties>
               <text value="输出 CSV"/>
+            </properties>
+          </component>
+          <component id="6d900" class="javax.swing.JButton" binding="savBtn">
+            <constraints/>
+            <properties>
+              <text value="保存通讯录"/>
             </properties>
           </component>
         </children>
