--- a/src/ui/csvDiag.form
+++ b/src/ui/csvDiag.form
@@ -2,7 +2,7 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ui.csvDiag">
   <grid id="cbd77" binding="contentPane" layout-manager="GridBagLayout">
     <constraints>
-      <xy x="48" y="54" width="436" height="297"/>
+      <xy x="48" y="54" width="436" height="419"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -44,14 +44,21 @@
           </grid>
         </children>
       </grid>
-      <grid id="e3588" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
+      <grid id="e3588" layout-manager="BorderLayout" hgap="0" vgap="0">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
           <gridbag weightx="1.0" weighty="1.0"/>
         </constraints>
         <properties/>
         <border type="none"/>
-        <children/>
+        <children>
+          <scrollpane id="fb4ee">
+            <constraints border-constraint="Center"/>
+            <properties/>
+            <border type="none"/>
+            <children/>
+          </scrollpane>
+        </children>
       </grid>
     </children>
   </grid>
