--- a/src/ui/contacts.form
+++ b/src/ui/contacts.form
@@ -61,19 +61,9 @@
                           <toolTipText value="输入搜索内容"/>
                         </properties>
                       </component>
-                      <component id="76fc3" class="javax.swing.JButton" binding="btnGo">
-                        <constraints>
-                          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                          <gridbag weightx="0.0" weighty="1.0"/>
-                        </constraints>
-                        <properties>
-                          <text value="Go"/>
-                          <visible value="true"/>
-                        </properties>
-                      </component>
                       <grid id="6827c" binding="btnPane" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
                         <constraints>
-                          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                           <gridbag weightx="0.0" weighty="0.0"/>
                         </constraints>
                         <properties/>
@@ -98,6 +88,12 @@
                               <text value=""/>
                             </properties>
                           </component>
+                          <component id="ba1df" class="javax.swing.JSpinner" binding="catalogTextSizeSpin">
+                            <constraints/>
+                            <properties>
+                              <visible value="false"/>
+                            </properties>
+                          </component>
                         </children>
                       </grid>
                       <grid id="78bd9" binding="searchPane" layout-manager="BorderLayout" hgap="0" vgap="0">
@@ -116,7 +112,7 @@
                             <constraints border-constraint="Center"/>
                             <properties>
                               <model>
-                                <item value="3117004478"/>
+                                <item value="searchResult"/>
                               </model>
                               <visible value="true"/>
                             </properties>
@@ -429,21 +425,21 @@
                     <properties/>
                     <border type="none"/>
                     <children>
-                      <grid id="734f6" binding="btnPane2" layout-manager="BorderLayout" hgap="0" vgap="0">
+                      <grid id="734f6" binding="btnPane2" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
                         <constraints border-constraint="South"/>
                         <properties/>
                         <border type="none"/>
                         <children>
                           <component id="7bf1c" class="javax.swing.JButton" binding="editProfileBtn">
-                            <constraints border-constraint="Center"/>
+                            <constraints/>
                             <properties>
-                              <text value="修改用户信息"/>
+                              <text value="修改密码"/>
                             </properties>
                           </component>
                         </children>
                       </grid>
                       <scrollpane id="3a127" binding="userInfoPane">
-                        <constraints border-constraint="Center"/>
+                        <constraints border-constraint="North"/>
                         <properties/>
                         <border type="none" title="用户信息">
                           <title-color color="-16777216"/>
