--- a/src/ui/login.form
+++ b/src/ui/login.form
@@ -110,6 +110,15 @@
                 </constraints>
                 <properties/>
               </component>
+              <component id="56541" class="javax.swing.JLabel" binding="statusLbl">
+                <constraints>
+                  <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <gridbag weightx="0.0" weighty="0.0"/>
+                </constraints>
+                <properties>
+                  <text value=""/>
+                </properties>
+              </component>
             </children>
           </grid>
         </children>
